logs/clusterpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clusterPy-0.9.9.egg-info'...
Listing './lib/python3.5/site-packages/clusterpy'...
Compiling './lib/python3.5/site-packages/clusterpy/__init__.py'...
***   File "./lib/python3.5/site-packages/clusterpy/__init__.py", line 2
    print "ClusterPy: Library of spatially constrained clustering algorithms"
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clusterpy/core'...
Compiling './lib/python3.5/site-packages/clusterpy/core/componentsIO.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/componentsIO.py", line 60
    if area2 not in Wrook[area1] and area2<>area1:
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clusterpy/core/data'...
Compiling './lib/python3.5/site-packages/clusterpy/core/data/sar.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/data/sar.py", line 70
    print "Spatial DGP: %s; size: %d; sig2: %.2f; rho: %.2f"%(self.dgp, self.n, self.sig2,
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/data/spots.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/data/spots.py", line 96
    while c < spines[i] and lastC <> c: # While the cluster is not yet
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clusterpy/core/geometry'...
Compiling './lib/python3.5/site-packages/clusterpy/core/geometry/areas.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/geometry/areas.py", line 31
    print "Processing geometric areas"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clusterpy/core/geometry/dissolve.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/geometry/dissolve.py", line 39
    print "Problem: No clustering algorithm has been executed on the layer"
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clusterpy/core/inputs.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/inputs.py", line 47
    print "Creating new layer"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clusterpy/core/layer.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/layer.py", line 176
    print "Dissolving lines"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/clusterpy/core/toolboxes'...
Listing './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster'...
Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/amoeba.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/amoeba.py", line 57
    print "Running computationally efficient AMOEBA (Duque et al., 2010)"
                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/arisel.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/arisel.py", line 87
    print "Running original Arisel algorithm"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azp.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azp.py", line 71
    print "Running original AZP algorithm (Openshaw and Rao, 1995)"
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azpRtabu.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azpRtabu.py", line 81
    print "Running original AZP-R-Tabu algorithm (Openshaw and Rao, 1995)"
                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azpSa.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azpSa.py", line 89
    print "Running original AZP-SA algorithm (Openshaw and Rao, 1995)"
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azpTabu.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/azpTabu.py", line 86
    print "Running original AZP-Tabu algorithm (Openshaw and Rao, 1995)"
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/componentsAlg'...
Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/componentsAlg/__init__.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/componentsAlg/__init__.py", line 69
    print "Disconnected areas neighs: ", list(self.noNeighs)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/geoSOM.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/geoSOM.py", line 78
    print "Geo-Som"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/maxpTabu.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/maxpTabu.py", line 75
    print "Running max-p-regions model (Duque, Anselin and Rey, 2010)"
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/random.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/random.py", line 53
    raise Exception, message
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/som.py'...
***   File "./lib/python3.5/site-packages/clusterpy/core/toolboxes/cluster/som.py", line 85
    print "Original Self Organizing Maps"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
